{
    "version": 1,
    "name": "InputControl",
    "maps": [
        {
            "name": "Player",
            "id": "7ea21021-a2f6-494d-8a5b-f6d81f384b80",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e5236831-7abf-4d19-9aba-479bb233ac99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "97b4eeb1-580b-4a18-971a-7440bae49996",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8c3a55a8-059c-4d3d-9bbf-e89ef00e4edb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "14cfe073-a952-48d2-be4d-0dba412dc200",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "1b340946-600f-4560-87b3-bf1a0b6d139c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a56936b3-8f3a-4767-ab17-da88027e9d7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "52ab513d-b9e1-42d6-bb07-9ee573a6c305",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2ef28070-e83b-4890-abe9-47dcbbb9d4a5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f73566a7-69d0-4816-9c8f-9f63e4505a98",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b5d21445-2e40-4f3f-900c-b02973f7c0e2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c19e7412-b970-482b-a299-8abe47584756",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "16304813-1854-4786-b5fc-cdc4517bda05",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fbb3af4-4891-4813-9729-22d7b89a4cca",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e98d02b2-9207-46c5-be32-728db08afc01",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55a50755-65d8-4e7b-8972-180a469ab721",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b0d1f45-a5e3-42a9-8ee8-8aa27421ccde",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "a8cfa32b-a9b7-46e8-a43c-656ec7dc860d",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "76028f58-2312-4433-b603-277b4a5edb9e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a5fd4aa7-de7f-4b62-a154-f6b8694f32a2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "def46ef0-ed6b-48d3-9610-4c29e4784aa2",
            "actions": [
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "7002d585-7c93-406d-a014-b83a1f7d46fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7e34b88d-c030-4451-908e-25f9f370b943",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}